--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,21 @@ kvm-bindings = "0.9.0"
 kvm-ioctls = "0.18.0"
 libc = "0.2.158"
 
+[dependencies.windows]
+version = "0.58.0"
+features = [
+    "Win32_System_Memory",
+    "Data_Xml_Dom",
+    "Win32_System_Hypervisor",
+    "Win32_Foundation",
+    "Win32_Storage_FileSystem",
+    "Win32_System_SystemServices",
+    "Win32_Security",
+    "Win32_System_Threading",
+    "Win32_UI_WindowsAndMessaging",
+]
+
+
 [features]
 default = []
 profiler = ["auto-calibrate"]
