F: MicroVM in Rust

--- a/test/Makefile
+++ b/test/Makefile
@@ -38,7 +38,7 @@ all: $(OBJ)
 # Cleans everything.
 clean:
 	rm -f $(OBJ)
-	rm -f $(BINARIES_DIR)/$(BIN).elf
+	rm -f $(BINARIES_DIR)/$(BIN)
 
 #===================================================================================================
 
