--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ anyhow = "1.0.86"
 log = "0.4.22"
 flexi_logger = "0.28.5"
 cfg-if = "1.0.0"
+sys = { git = "https://github.com/nanvix/sys", branch = "enhancement-ipc-message" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 kvm-bindings = "0.9.0"
