--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
         script: |
           source "$HOME/.cargo/env"
           cd microvm-release
-          sudo -E make run | tee output.txt
+          sudo -E make run 2>&1 | tee output.txt
           echo "Magic String: $(cat output.txt | tail -n 1)"
           [ "$(cat output.txt | tail -n 1)" != "Hello, world!" ] && exit 1 || exit 0 ;
 
