E: Refactoring Source Tree

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,51 +1,16 @@
 # Copyright(c) The Maintainers of Nanvix.
 # Licensed under the MIT License.
 
-#===================================================================================================
-# Build Artifacts
-#===================================================================================================
-
-# C source files.
-C_SRC=$(wildcard *.c)
-
-# Assembly source files.
-ASM_SRC=$(wildcard *.S)
-
-# Object files.
-OBJ = $(ASM_SRC:.S=.o) \
-	  $(C_SRC:.c=.o)   \
-
-BIN=hello-world.elf
-
-#===================================================================================================
-# Toolchain Configuration
-#===================================================================================================
-
-# Compiler flags.
-CFLAGS := -m32 -nostdlib -ffreestanding -march=pentium -Wall -Wextra -Werror -O3
-
-# Linker flags.
-LDFLAGS := -m32 -Wl,--build-id=none -no-pie -nostdlib -nostartfiles -ffreestanding -T $(BUILD_DIR)/link.ld
-
-#===================================================================================================
-# Build Targets
-#===================================================================================================
-
-# Buidls everything.
-all: $(OBJ)
-	$(LD) $(LDFLAGS) -o $(BINARIES_DIR)/$(BIN) $^
+# Builds everything.
+all: all-hello-world
 
 # Cleans everything.
-clean:
-	rm -f $(OBJ)
-	rm -f $(BINARIES_DIR)/$(BIN)
+clean: clean-hello-world
 
-#===================================================================================================
+# Builds hello-world.
+all-hello-world:
+	$(MAKE) -C hello-world all
 
-# Builds a C source file.
-%.o: %.c
-	$(CC) $(CFLAGS) $< -c -o $@
-
-# Builds an assembly source file.
-%.o: %.S
-	$(CC) $(CFLAGS) $< -c -o $@
+# Cleans hello-world.
+clean-hello-world:
+	$(MAKE) -C hello-world clean
