--- a/test/Makefile
+++ b/test/Makefile
@@ -2,10 +2,10 @@
 # Licensed under the MIT License.
 
 # Builds everything.
-all: all-hello-world
+all: all-hello-world all-noop
 
 # Cleans everything.
-clean: clean-hello-world
+clean: clean-hello-world clean-noop
 
 # Builds hello-world.
 all-hello-world:
@@ -14,3 +14,11 @@ all-hello-world:
 # Cleans hello-world.
 clean-hello-world:
 	$(MAKE) -C hello-world clean
+
+# Builds noop.
+all-noop:
+	$(MAKE) -C noop all
+
+# Cleans noop.
+clean-noop:
+	$(MAKE) -C noop clean
