--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ anyhow = "1.0.86"
 log = "0.4.22"
 flexi_logger = "0.28.5"
 cfg-if = "1.0.0"
+serde = { version = "1.0" }
+serde_json = "1.0"
 sys = { git = "https://github.com/nanvix/sys", branch = "releases/v1.4.0" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
