--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,16 @@
 # Copyright(c) The Maintainers of Nanvix.
 # Licensed under the MIT License.
 
-[package]
-name = "microvm"
-authors = ["The Maintainers of Nanvix"]
-version = "0.4.0"
-edition = "2021"
+[workspace]
+members = ["src/*"]
+resolver = "2"
 
-[dependencies]
+
+[workspace.dependencies]
 anyhow = "1.0.86"
-log = "0.4.22"
 flexi_logger = "0.28.5"
-cfg-if = "1.0.0"
-serde = { version = "1.0" }
+log = "0.4.22"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sys = { git = "https://github.com/nanvix/sys", branch = "releases/v1.4.0" }
-
-[target.'cfg(target_os = "linux")'.dependencies]
-kvm-bindings = "0.9.0"
-kvm-ioctls = "0.18.0"
-libc = "0.2.158"
-
-[features]
-default = []
-profiler = ["auto-calibrate"]
-auto-calibrate = []
+tokio = { version = "1", features = ["full"] }
