[contrib] E: Updating kernel

--- a/src/microvm/Cargo.toml
+++ b/src/microvm/Cargo.toml
@@ -13,7 +13,7 @@ flexi_logger = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-sys = { workspace = true }
+kernel = { workspace = true }
 cfg-if = "1.0.0"
 gateway = { path = "../gateway" }
 tokio = { workspace = true }
