--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ flexi_logger = "0.29.0"
 log = "0.4.22"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-sys = { git = "https://github.com/nanvix/sys", branch = "releases/v1.4.0" }
+kernel = { git = "https://github.com/nanvix/kernel", branch = "releases/v0.7.1", default-features = false }
 tokio = { version = "1.40.0", features = ["full"] }
