--- a/src/gateway/Cargo.toml
+++ b/src/gateway/Cargo.toml
@@ -12,7 +12,7 @@ flexi_logger = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-sys = { workspace = true }
+kernel = { workspace = true }
 hyper = { version = "1.4.1", features = ["full"] }
 tokio = { workspace = true }
 http-body-util = "0.1.2"
