--- a/src/gateway/Cargo.toml
+++ b/src/gateway/Cargo.toml
@@ -3,8 +3,9 @@
 
 [package]
 name = "gateway"
-version = "0.1.0"
-edition = "2021"
+authors = { workspace = true }
+version = { workspace = true }
+edition = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
