--- a/src/microvm/Cargo.toml
+++ b/src/microvm/Cargo.toml
@@ -3,9 +3,9 @@
 
 [package]
 name = "microvm"
-authors = ["The Maintainers of Nanvix"]
-version = "0.5.0"
-edition = "2021"
+authors = { workspace = true }
+version = { workspace = true }
+edition = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
