--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,25 @@
 # Copyright(c) The Maintainers of Nanvix.
 # Licensed under the MIT License.
 
-[workspace]
-members = ["src/*"]
-resolver = "2"
-
-[workspace.package]
+[package]
+name = "microvm"
 authors = ["The Maintainers of Nanvix"]
 version = "0.6.0"
 edition = "2021"
 
-[workspace.dependencies]
+[dependencies]
 anyhow = "1.0.89"
 flexi_logger = "0.29.0"
 log = "0.4.22"
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
 kernel = { git = "https://github.com/nanvix/kernel", branch = "releases/v1.0.0", default-features = false }
-tokio = { version = "1.40.0", features = ["full"] }
+cfg-if = "1.0.0"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+kvm-bindings = "0.9.0"
+kvm-ioctls = "0.18.0"
+libc = "0.2.159"
+
+[features]
+default = []
+profiler = ["auto-calibrate"]
+auto-calibrate = []
